--- a/ArchivosMultimediaConCompose/app/src/main/AndroidManifest.xml
+++ b/ArchivosMultimediaConCompose/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" ></uses-permission>
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" ></uses-permission>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ArchivosMultimediaConCompose">
+        <receiver android:name=".receivers.AlarmaReceiver"
+
+            >
+
+        </receiver>
         <activity
             android:name=".MainActivity"
             android:exported="true"
