--- a/ArchivosMultimediaConCompose/app/src/main/AndroidManifest.xml
+++ b/ArchivosMultimediaConCompose/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" ></uses-permission>
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" ></uses-permission>
 
     <application
+        android:name=".AlarmApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
